    user experience.

  - Option jedit_completion_immediate may now get used with
    jedit_completion_delay > 0, to complete symbol abbreviations
    aggressively while benefiting from combined syntactic and semantic
    completion.

  - Support for simple completion templates (with single
    place-holder), e.g. "`" for text cartouche, or "@{" for
    antiquotation.

  - Improved treatment of completion vs. various forms of jEdit text
    selection (multiple selections, rectangular selections,
    rectangular selection as "tall caret").

  - More reliable treatment of GUI events vs. completion popups: avoid
    loosing keystrokes with slow / remote graphics displays.

* Integrated spell-checker for document text, comments etc. with
completion popup and context-menu.  See also "Plugin Options /
Isabelle / General / Spell Checker" for some system options.

* Auxiliary files ('ML_file' etc.) are managed by the Prover IDE.
Open text buffers take precedence over copies within the file-system.

* Improved support for Isabelle/ML, with jEdit mode "isabelle-ml" for
auxiliary ML files.

* Document panel: simplied interaction where every single mouse click
(re)opens document via desktop environment or as jEdit buffer.

* Find panel: support for 'find_consts' in addition to
'find_theorems'.

* Option "jedit_print_mode" (see also "Plugin Options / Isabelle /
General") allows to specify additional print modes for the prover
process, without requiring old-fashioned command-line invocation of
"isabelle jedit -m MODE".

* New panel: Simplifier trace.  Provides an interactive view of the
simplification process, enabled by the newly-introduced
"simplifier_trace" declaration.

* Support for Navigator plugin (with toolbar buttons).

* More support for remote files (e.g. http) using standard Java
networking operations instead of jEdit virtual file-systems.

* Improved Console/Scala plugin: more uniform scala.Console output,
more robust treatment of threads and interrupts.

